# kdrover

./: .gitignore  Cargo.toml  README.md  drover.ini.example  package.bat  package.ps1
drover-core/: Cargo.toml
drover-core/src/: discord.rs  http_auth.rs  install.rs  lib.rs  options.rs  proxy.rs  socket_manager.rs  socks5.rs  udp.rs  udp_bypass.rs
kdrover-cli/: Cargo.toml
kdrover-cli/src/: main.rs
kdrover-dll/: Cargo.toml  build.rs  version.def
kdrover-dll/src/: hooks.rs  lib.rs  state.rs  version_proxy.rs
kdrover-gui/: Cargo.toml
kdrover-gui/src/: app.rs  main.rs
