[package]
name = "drover-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
base64 = "0.22"
once_cell = "1.21"
parking_lot = "0.12"
regex = "1.11"
rust-ini = "0.21"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_ToolHelp",
] }
