[package]
name = "kdrover-dll"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"

[lib]
name = "kdrover_payload"
crate-type = ["cdylib"]

[dependencies]
drover-core = { path = "../drover-core" }
once_cell = "1.21"
retour = "0.3"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Environment",
    "Win32_System_IO",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
] }
